--- a/bower.json
+++ b/bower.json
@@ -19,6 +19,8 @@
     "angular": "~1.4.8",
     "angular-ui-router": "~0.2.15",
     "bootstrap": "^3.3.6",
-    "jquery": "^2.2.1"
+    "jquery": "^2.2.1",
+    "angular-jwt": "^0.0.9",
+    "angular-cookies": "^1.5.0"
   }
 }
