--- a/package.json
+++ b/package.json
@@ -10,8 +10,11 @@
   "keywords": [],
   "description": "",
   "dependencies": {
+    "angular-cookies": "^1.5.0",
+    "bcrypt": "^0.8.5",
     "body-parser": "^1.14.1",
     "bower": "^1.6.8",
+    "cookie-parser": "^1.4.1",
     "ejs": "^2.3.4",
     "express": "^4.13.3",
     "gulp": "^3.9.0",
@@ -22,6 +25,7 @@
     "gulp-run": "^1.6.11",
     "gulp-util": "^3.0.7",
     "jade": "^1.11.0",
+    "jwt-simple": "^0.4.1",
     "mongoose": "^4.2.8",
     "morgan": "^1.6.1",
     "rimraf": "^2.4.4"
