--- a/bower.json
+++ b/bower.json
@@ -2,9 +2,8 @@
   "name": "scaffold",
   "description": "",
   "main": "app.js",
-  "authors": [
-    "Damon Kalaboukis <damonkala@yahoo.com>"
-  ],
+  "authors":
+  "Damon Kalaboukis <damonkala@yahoo.com>",
   "license": "ISC",
   "moduleType": [],
   "homepage": "",
@@ -18,9 +17,11 @@
   "dependencies": {
     "angular": "~1.4.8",
     "angular-ui-router": "~0.2.15",
-    "bootstrap": "^3.3.6",
-    "jquery": "^2.2.1",
-    "angular-jwt": "^0.0.9",
-    "angular-cookies": "^1.5.0"
+    "bootstrap": "~3.3.6",
+    "angular-cookies": "~1.4.8",
+    "angular-jwt": "~0.0.9"
+  },
+  "resolutions": {
+    "angular": "1.4.9"
   }
 }
